# arkhangar

./: .gitignore  CMakeLists.txt  README  config.h.in
aircraft/arducopter/: README  arducopter  arducopter-set.xml  arducopter.xml  initfile.xml
aircraft/arducopter/Models/: arducopter.xml
aircraft/easystar/: easystar  easystar-datcom.xml  easystar-set.xml  easystar-windtunnel.xml  easystar.xml  easystar_lin.sce
aircraft/easystar/Data/: .~lock.Delivery 3 - Cargo UAS (1).ods#
aircraft/easystar/Datcom/: Makefile  easystar_aero.xml  easystar_aero_windtunnel.xml
aircraft/easystar/Init/: cruise.xml
aircraft/easystar/Models/: aircraft.blend  shadowmaster_dim.gnumeric  splash.rgb
aircraft/easystar/Systems/: sound.xml
aircraft/easystar2/: easystar.xml
aircraft/easystar2/Datcom/: datcom_aero.xml
aircraft/easystar2/Scripts/: cruise.xml
aircraft/easystar_missile/: easystar-windtunnel.xml  easystar_missile-set.xml
aircraft/globalhawk/: .gitignore  globalhawk-set.xml  globalhawk.xml
aircraft/globalhawk/Data/: Delivery 2 - Global Hawk.xlsx
aircraft/globalhawk/Engines/: Rolls-Royce-F137-AD-100.xml
aircraft/globalhawk/Models/: shadow-m.blend  shadow.blend  shadow.blend1
aircraft/globalhawk/scripts/: cruise_steady_turn_init.xml
aircraft/missile/: fin data.tmp  missile.xml  missile_aero.xml
aircraft/old/easystar/: README
aircraft/orbiter/: cruise_steady_turn_init.xml  orbiter-set.xml  orbiter.xml  orbiter_old.xml
aircraft/orbiter/Data/: Delivery 2 - Orbiter 2-21-2012.xlsx  orbiter_analysis.gnumeric
aircraft/orbiter/Datcom/: Makefile  orbiter.dcm  orbiter_aero.xml
aircraft/orbiter/Engines/: orbiter-electric.xml  orbiter-prop.xml
aircraft/orbiter/Models/: orbiter-model.xml  orbiter.ac  orbiter.blend  orbiter.blend1
aircraft/shadow/: shadow-set.xml  shadow.rgb  shadow.xml
aircraft/shadow/Data/: NAS Data JHW Deliverable 11-21-11.xlsx  NAS Data Template.xlsx
aircraft/shadow/Datcom/: Makefile  shadow.dcm  shadow_aero.xml
aircraft/shadow/Engines/: Makefile.am  UEL-741AR74-1102.xml  prop.xml
aircraft/shadow/Models/: shadow-model.xml  shadow.ac
aircraft/shadow/scripts/: shadow_fuel_analysis.xml  trim.xml
aircraft/sm-3/: README  initfile.xml  sm-3  sm-3-set.xml  sm-3.rgb  sm-3.xml
aircraft/sm-3/Models/: sm-3-model.xml  sm-3.ac  sm-3.blend  sm-3.blend1
aircraft/sm-3/missile-data/: missile_aero.xml
aircraft/sm-3/scripts/: thrust-test.xml
aircraft/template/: .gitignore  Makefile  template  template-set.xml  template.xml
aircraft/template/Datcom/: datcom.dcm  datcom_aero.xml
aircraft/template/Engines/: GE-T700.xml  prop.xml
aircraft/template/Models/: aircraft-m.ac  aircraft.blend  model.xml
aircraft/template/Scripts/: cruise.xml
aircraft/template/Systems/: aerodynamics_simple.xml  flight_control.xml
aircraft/template/patches/: aero-fixes
aircraft/waypoint/: README  waypoint  waypoint-set.xml  waypoint.xml
aircraft/waypoint/Models/: waypoint-model.xml  waypoint.ac  waypoint.blend
analysis/: MOI_computation.gnumeric
arducopter/: initfile.xml
arducopter/Models/: arducopter.xml
cmake/arkcmake/: FindARKHANGAR.cmake
scripts/: 737_cruise_steady_turn_simplex.xml  easystar_steady_turn_simplex.xml  fgFly.sh  fgrunExt.sh  linkFlightGear.sh  newAircraft.sh
